<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageButton
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:src="@drawable/ic_back"
        android:background="@drawable/background_button_white"/>

    <EditText
        android:id="@+id/edit_text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/button_back"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="30dp"
        android:layout_toStartOf="@id/button_back"
        android:background="@color/white"
        android:fontFamily="@font/source_code_pro_medium"
        android:hint="@string/genial_title"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textColorHighlight="@color/grey"
        android:textColorHint="@color/grey"
        android:textCursorDrawable="@drawable/background_cursor"
        android:textSize="24sp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/relative_bottom"
        android:layout_below="@id/button_back"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="15dp"
        android:scrollbars="none"
        android:overScrollMode="never"
        android:fillViewport="true">
        <EditText
            android:id="@+id/edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:fontFamily="@font/source_code_pro"
            android:hint="@string/no_less_genial_text"
            android:textColor="@color/black"
            android:textColorHighlight="@color/grey"
            android:gravity="start"
            android:textColorHint="@color/grey"
            android:textCursorDrawable="@drawable/background_cursor"
            android:textSize="16sp"/>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/relative_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp">
        <RelativeLayout
            android:id="@+id/button_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:background="@drawable/background_button_red"
            android:clickable="true"
            android:focusable="true"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp">
            <ImageView
                android:id="@+id/image_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_delete"
                android:layout_centerVertical="true"/>
            <TextView
                android:id="@+id/text_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/image_delete"
                android:text="@string/delete"
                android:textColor="@color/red"
                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/button_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="@drawable/background_button_blue"
            android:clickable="true"
            android:focusable="true"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp">
            <ImageView
                android:id="@+id/image_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@id/text_save"
                android:src="@drawable/ic_save"
                android:layout_centerVertical="true"/>
            <TextView
                android:id="@+id/text_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/save"
                android:textColor="@color/blue"
                android:layout_centerVertical="true"
                android:textSize="16sp" />
        </RelativeLayout>

        <TextView
            android:id="@+id/text_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/source_code_pro_medium"
            android:textColor="@color/grey"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textSize="12sp" />
    </RelativeLayout>

</RelativeLayout>